# USC

./: .gitignore  CMakeLists.txt  README.md  USC.code-workspace
BigBrother'sEye/: BBE-client.cpp  BBE-server.cpp
ServerVis/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
client/: UClient.cpp  UClient.h  main.cpp
crypto/: GInt.cpp  GInt.h  aes.cpp  aes.h  key_exchg.cpp  key_exchg.h  prime.cpp  prime.h
server/: UServer.cpp  UServer.h  main.cpp
